--- a/app/work/page.mdx
+++ b/app/work/page.mdx
@@ -44,3 +44,4 @@ Throughout my two years, I was able to work on some hard problems: decoupling a 
 <Small>Software Engineer, 2015 - 2018</Small>
 
 Workiva ($WK) is a cloud platform for data reporting and compliance. During my time at Workiva, I gained my first production experience using React. I worked on tooling to help predict and alert and regressions in our SaaS platform, building a product similar to open-source tools like Sentry.
+@/components/animated-name
