--- a/app/docs/usage/env-variables/page.mdx
+++ b/app/docs/usage/env-variables/page.mdx
@@ -25,4 +25,4 @@ export const env = createEnv({
 
 T3 Env uses the `createEnv` function to create the schema validate both client and server-side environment variables
 
-> ℹ️ For more information about how createEnv works internally, check out the T3 Env↗ docs
+> ℹ️ For more information about how `createEnv` works internally, check out the [T3 Env↗](https://env.t3.gg/docs/introduction) docs
