breadcrumb + style fixes

--- a/app/docs/introduction/page.mdx
+++ b/app/docs/introduction/page.mdx
@@ -17,7 +17,7 @@ After countless projects and many years on this tech, we have lots of opinions a
 This is NOT an all-inclusive template. We expect you to bring your own libraries that solve the needs of YOUR application.
 While we don’t want to prescribe solutions to more specific problems like state management and deployment, we do have some recommendations listed here.
 
-## T3 Axioms
+## GELLIFY Axioms
 
 We’ll be frank - this is an opinionated project. We share a handful of core beliefs around building and we treat them as the basis for our decisions.
 
