--- a/app/docs/usage/env-variables/page.mdx
+++ b/app/docs/usage/env-variables/page.mdx
@@ -1,6 +1,6 @@
 # Environment Variables
 
-Create T3 App uses its own package [@t3-oss/env-nextjs↗](https://env.t3.gg/) along with [zod↗](https://zod.dev/) under the hood for validating environment variables at runtime and buildtime by providing a simple logic in `src/env.js`.
+Create GELLIFY App uses its own package [@t3-oss/env-nextjs↗](https://env.t3.gg/) along with [zod↗](https://zod.dev/) under the hood for validating environment variables at runtime and buildtime by providing a simple logic in `src/env.js`.
 
 ## env.js
 
