--- a/app/docs/usage/shadcn-ui/page.mdx
+++ b/app/docs/usage/shadcn-ui/page.mdx
@@ -1,14 +1,49 @@
 # Shadcn/ui
 
-Beautifully designed components that you can copy and paste into your apps. Accessible. Customizable. Open Source.
-This is **NOT** a component library. It's a collection of re-usable components that you can copy and paste into your apps.
+Choosing the right component library is crucial for building scalable, maintainable, and accessible applications. After evaluating several options, we selected **shadcn/ui** as our primary UI component library. This decision was based on multiple factors, including developer experience (DX), accessibility, design flexibility, AI-assisted development, and distribution efficiency.
+Let's go over the key benefits
 
-## What do you mean by not a component library?
+### Developer Experience (DX)
 
-I mean you do not install it as a dependency. It is not available or distributed via npm.
-Pick the components you need. Copy and paste the code into your project and customize to your needs. The code is yours.
+shadcn/ui enhances developer productivity with:
 
-_Use this as a reference to build your own component libraries._
+- **Unopinionated, customizable components**: Unlike traditional UI libraries that enforce a strict design system, shadcn/ui provides flexible components that can be easily tailored.
+- **Built with TypeScript and Tailwind CSS**: Ensuring strong typing, better maintainability, and seamless integration with modern styling methodologies.
+- **No external runtime dependencies**: Components are shipped as code, meaning no additional runtime libraries are required, reducing bundle size and performance overhead.
+
+### Accessibility (a11y)
+
+Accessibility is a core principle of shadcn/ui, with features such as:
+
+- **Keyboard and screen reader support**: Ensuring compliance with WCAG standards out-of-the-box.
+- **ARIA attributes and best practices**: Built-in support for accessible interactions without requiring additional configuration.
+- **Customizability without compromising accessibility**: Unlike some rigid libraries, shadcn/ui allows developers to modify components while maintaining accessibility best practices.
+
+### AI-Assisted Development
+
+shadcn/ui’s architecture is AI-friendly, making it easier for AI-powered tools to assist with development by:
+
+- **Clear, structured component architecture**: Simplifies automated code generation and modifications.
+- **Seamless integration with AI-driven coding tools (e.g., GitHub Copilot, ChatGPT)**: Ensuring developers can efficiently generate, refactor, and debug components.
+- **Minimal abstraction layers**: Allowing AI models to better understand and suggest improvements for UI logic and styling.
+
+### Design and Customization
+
+shadcn/ui offers unparalleled flexibility for design teams by:
+
+- **Not enforcing a predefined theme**: Making it adaptable to various design systems.
+- **Easy token-based styling**: Enabling rapid customization without losing maintainability.
+- **Supports dark mode and theming**: With built-in Tailwind utilities that simplify UI adjustments.
+
+### Efficient Distribution and Maintainability
+
+Unlike monolithic UI frameworks, shadcn/ui optimizes distribution through:
+
+- **Components as code**: Avoiding package dependency bloat.
+- **Version-independent updates**: Since components are integrated into the codebase directly, updates don’t require dependency management headaches.
+- **Better long-term maintainability**: Teams can evolve components without relying on third-party release cycles.
+
+shadcn/ui provides the right balance of flexibility, accessibility, developer experience, and maintainability. Its component-as-code philosophy ensures that we have complete control over our UI, leading to a more efficient, scalable, and accessible development workflow. By adopting shadcn/ui, we empower our team to build high-quality, customizable interfaces without the overhead of rigid UI frameworks.
 
 ## What is Tailwind CSS?
 
