--- a/app/docs/why/page.mdx
+++ b/app/docs/why/page.mdx
@@ -14,15 +14,14 @@ Typesafety makes you faster. If you’re not convinced, you might be using TypeS
 
 ## Why Next.js?
 
-We love React. It has made UI development accessible in ways we never imagined before. It also can lead developers down some rough paths.
-
-Next.js offers a lightly opinionated, heavily optimized approach to creating applications using React. From routing to API definitions to image rendering, we trust Next.js to lead developers toward good decisions.
-
+Next.js is our go-to framework because it aligns perfectly with our React and TypeScript expertise, offering a full-stack, extensible solution. It provides production-ready features like image optimization, caching, and ISR, ensuring high performance and scalability. With built-in SEO, optimized data fetching (SSG, SSR, RSC), and seamless integration with our preferred tools (NeonDB, Clerk, shadcn/ui), it enables us to build faster, smarter, and more efficient applications. Simply put, Next.js helps us ship high-quality products with less hassle.
 ## Why Shadcn/ui?
 
-TODO
+shadcn/ui was chosen as our component library due to its flexibility, accessibility, and strong developer experience. It provides unopinionated, customizable components built with TypeScript and Tailwind CSS, ensuring maintainability and efficiency.
 
-### Tailwind CSS
+The library prioritizes accessibility with built-in ARIA support and WCAG compliance. Its AI-friendly structure simplifies automation, refactoring, and debugging. Unlike traditional UI frameworks, shadcn/ui distributes components as code, reducing dependency bloat and improving long-term maintainability. With seamless theming and dark mode support, it offers unparalleled design customization while keeping performance optimal.
+
+### 🎨 Tailwind CSS
 
 Tailwind feels like “zen-mode CSS”.
 
@@ -34,16 +33,18 @@ Additionally, with its inline-like approach, Tailwind encourages you to style wi
 
 While we believe in keeping things as simple as possible, we find these pieces being used in every “app” like project we build. create-gellify-app does a great job of letting you adopt the pieces you need.
 
-### Drizzle
+### 🚀 Drizzle
 
 Drizzle is to SQL what TypeScript is to JS. It created a developer experience that didn’t exist before. By generating types from a user-defined typescript schema compatible with several databases, Drizzle guarantees end-to-end typesafety from your database to your app.
 
 Drizzle provides a whole suite of tools making daily interactions with your database easier. Notably, the Drizzle Client is responsible for querying and making SQL so easy you’ll barely notice you’re using it, and Drizzle Studio is a convenient GUI for your database that lets you read and manipulate your data quickly without having to write code.
 
-### Neon
+### 🐘 Neon
 
-TODO
+NeonDB is a next-gen PostgreSQL database offering branching, autoscaling, and built-in monitoring—making development smoother and more efficient. With Git-like database branches, teams can test features without affecting production. Autoscaling ensures optimal performance while keeping costs low, and real-time monitoring eliminates the need for extra tools.
 
-### Clerk
+It’s affordable, serverless, and fully managed, reducing ops overhead while staying PostgreSQL-compatible. Plus, it’s billable via AWS and Azure, making it a hassle-free choice for both clients and internal projects. 🚀
 
-When you want an authentication system in your NextJS application, Clerk is an excellent managed solution to bring in the complexity of security without the hassle of having to build it yourself. It comes with an extensive list of features ready to use.
+### 🔐 Clerk
+
+Clerk provides a fully managed authentication service, eliminating setup hassles and ensuring secure, scalable auth in minutes. It seamlessly integrates with Next.js offering built-in 2FA, WebAuthn, and social logins. While it's a paid service, the time saved on setup and maintenance makes it worth the cost. Overall, Clerk keeps auth painless, secure, and efficient, letting us focus on building great products.
