--- a/app/docs/usage/clerk/page.mdx
+++ b/app/docs/usage/clerk/page.mdx
@@ -1,4 +1,4 @@
-# Why We Use Clerk for Authentication
+# Clerk 
 
 ## Authentication Without the Headache
 Setting up authentication **shouldn’t be a nightmare**. With Clerk, we get a **fully managed authentication service** that integrates seamlessly into our applications in just a few minutes—**no complex setup, no maintenance, no stress.**
