--- a/app/docs/usage/shadcn-ui/page.mdx
+++ b/app/docs/usage/shadcn-ui/page.mdx
@@ -3,7 +3,9 @@
 Choosing the right component library is crucial for building scalable, maintainable, and accessible applications. After evaluating several options, we selected **shadcn/ui** as our primary UI component library. This decision was based on multiple factors, including developer experience (DX), accessibility, design flexibility, AI-assisted development, and distribution efficiency.
 Let's go over the key benefits
 
-### Developer Experience (DX)
+## Key Benefits
+
+### 👩‍💻 Developer Experience (DX)
 
 shadcn/ui enhances developer productivity with:
 
@@ -11,7 +13,7 @@ shadcn/ui enhances developer productivity with:
 - **Built with TypeScript and Tailwind CSS**: Ensuring strong typing, better maintainability, and seamless integration with modern styling methodologies.
 - **No external runtime dependencies**: Components are shipped as code, meaning no additional runtime libraries are required, reducing bundle size and performance overhead.
 
-### Accessibility (a11y)
+### 🧑‍🦯 Accessibility (a11y)
 
 Accessibility is a core principle of shadcn/ui, with features such as:
 
@@ -19,7 +21,7 @@ Accessibility is a core principle of shadcn/ui, with features such as:
 - **ARIA attributes and best practices**: Built-in support for accessible interactions without requiring additional configuration.
 - **Customizability without compromising accessibility**: Unlike some rigid libraries, shadcn/ui allows developers to modify components while maintaining accessibility best practices.
 
-### AI-Assisted Development
+### 🤖 AI-Assisted Development
 
 shadcn/ui’s architecture is AI-friendly, making it easier for AI-powered tools to assist with development by:
 
@@ -27,7 +29,7 @@ shadcn/ui’s architecture is AI-friendly, making it easier for AI-powered tools
 - **Seamless integration with AI-driven coding tools (e.g., GitHub Copilot, ChatGPT)**: Ensuring developers can efficiently generate, refactor, and debug components.
 - **Minimal abstraction layers**: Allowing AI models to better understand and suggest improvements for UI logic and styling.
 
-### Design and Customization
+### 🎨 Design and Customization
 
 shadcn/ui offers unparalleled flexibility for design teams by:
 
@@ -35,7 +37,7 @@ shadcn/ui offers unparalleled flexibility for design teams by:
 - **Easy token-based styling**: Enabling rapid customization without losing maintainability.
 - **Supports dark mode and theming**: With built-in Tailwind utilities that simplify UI adjustments.
 
-### Efficient Distribution and Maintainability
+### 🚀 Efficient Distribution and Maintainability
 
 Unlike monolithic UI frameworks, shadcn/ui optimizes distribution through:
 
