--- a/app/docs/usage/neon/page.mdx
+++ b/app/docs/usage/neon/page.mdx
@@ -1,6 +1,4 @@
-# NeonDB
-
-## The Future of PostgreSQL is Here
+# Neon
 
 When it comes to databases, we want something that’s **fast, scalable, and cost-effective**—without the headaches of traditional infrastructure management. That’s why we chose **NeonDB**, a next-generation PostgreSQL database that makes life easier for developers and businesses alike.
 
