--- a/app/docs/reccomendations/page.mdx
+++ b/app/docs/reccomendations/page.mdx
@@ -1,70 +1,61 @@
 # Recommendations
 
-We recognize that the libraries included in `create-gellify-app` don’t solve every problem. While we encourage you to begin your project with the things that we provide, there will come a time when you need to bring in other packages. Only you can know what your project needs, but here are some things that we find ourselves recommending frequently.
+The libraries and tools included in `create-gellify-app` provide a strong foundation, but no tech stack is exhaustive. As your project evolves, you may encounter challenges that require specialized solutions. While we encourage starting with our default setup, there are cases where integrating additional libraries, services, or infrastructure can significantly enhance your development experience and product quality.
 
-These are recommendations by individual Create T3 App contributors and should not be seen as “official” endorsements by the Create T3 App team or T3-OSS. Please do your own research, especially before committing to paid services.
+Below, we share technologies that have proven useful in real-world scenarios. These are not official endorsements but rather suggestions based on practical experience. Always evaluate whether a tool aligns with your specific needs, especially before adopting paid services.
 
 ## State Management
-Editor’s Note: State management libraries can be great, but often aren’t necessary. tRPC’s React Query hooks should be able to take care of your server state. For client state, start with React’s useState, and reach for one of these options when you need more.
 
+> ⚠️ Strong opinion. Don't use them!
+
+On a more serious note you should consider all of the alternative, URL is a great place to store state and it's sharable. Additionally with RSC and server actions the need of additional storing system is less and less needed.
 
 ## Animations
-For when you need animations in your app, here are our recommendations.
+Animations enhance user experience, making interactions feel more fluid and engaging. Depending on your needs, consider:
 
 ### AutoAnimate
-
-**For animations with a single line of code**
-
-Most animation libraries try to satisfy every possible use case, and become clunky as a result. AutoAnimate is a zero-configuration tool that will give you a significant improvement in UX with no additional developer effort.
-
-- AutoAnimate Homepage↗
-- AutoAnimate GitHub↗
-- AutoAnimate Component Snippet↗
+If you want to add motion effects with zero configuration, AutoAnimate allows you to introduce smooth transitions with a single line of code. It’s lightweight and ideal for quick UI enhancements without additional complexity.
 
 ### Framer Motion
+For more sophisticated animations, Framer Motion provides a declarative API that enables precise control over animations, gestures, and layout transitions. It’s widely adopted for building polished, dynamic interfaces.
 
-**For complex animations with declarative code**
-
-Framer Motion provides a simple, declarative syntax and allows you to write less code to craft everything from complex animations to even gestures.
-
-- Framer Motion Homepage↗
-- Framer Motion Documentation↗
-
-## Deployments, Infrastructure, Databases and CI
+## Deployments, Infrastructure, Databases, and CI
+Ensuring smooth deployments, scalable infrastructure, and reliable databases is essential. These tools streamline your workflow and improve maintainability.
 
 ### Vercel
-
-**For hosting your app**
-
-Vercel took the hell of web deployments and made it a set-and-forget GitHub integration. We’ve scaled to hundreds of thousands of users without issue. AWS-powered, just a way better interface :)
-
-- Vercel Homepage↗
+Vercel revolutionized web app deployments with a seamless GitHub integration. It abstracts away infrastructure concerns while leveraging AWS under the hood, offering optimized performance and automatic scaling.
 
 ### Azure
+For enterprise-grade cloud solutions, Azure provides extensive services, from hosting to serverless computing and managed databases. Its tight integration with Microsoft products makes it a strong choice for organizations already invested in the ecosystem.
 
 ### Supabase
+An open-source alternative to Firebase, Supabase provides managed Postgres databases with real-time capabilities, authentication, and storage. It’s an excellent choice for building scalable applications without vendor lock-in.
 
 ### Trigger.dev
+For background jobs and workflows, Trigger.dev enables serverless job scheduling with first-class TypeScript support. It’s particularly useful for automating tasks within your application.
 
 ### Upstash
+If your app needs a scalable, low-latency database for caching or rate-limiting, Upstash offers a serverless Redis solution with consumption-based pricing, making it a cost-efficient option.
 
 ## Analytics
-User data is very valuable when you’re building an app. Here are some analytics providers we recommend.
+Understanding user behavior is crucial for optimizing your application. While many analytics providers exist, these stand out for their flexibility and feature sets.
 
 ### PostHog
-PostHog is a full-featured, open-source, and self-hostable solution for bringing in depth analytics to your product. They have SDKs for every library/framework imaginable.
-
-PostHog Homepage↗
+A self-hostable, open-source analytics platform that provides deep insights into user interactions. It includes features like session replay, feature flags, and product analytics without vendor lock-in.
 
 ## Monitoring
+Proactively monitoring application health and performance helps prevent issues before they impact users.
 
 ### Sentry
+A robust error-tracking platform that captures exceptions, performance bottlenecks, and logs in real-time, allowing you to diagnose and fix issues efficiently.
 
 ## Performance
+Optimizing performance ensures a smooth user experience and efficient resource utilization.
 
-Next Bundle Analyzer
-It can sometimes be difficult to determine what will be included in the build output for your app. Next Bundle Analyzer is an easy way to visualize and analyze the JavaScript bundles that are generated.
+### Next.js Bundle Analyzer
+When optimizing your Next.js app, understanding its bundle size is crucial. This tool visualizes the contents of your JavaScript bundles, helping you identify and eliminate unnecessary dependencies.
 
-@next/bundle-analyzer on npm↗
+### React Scan
+For detecting performance bottlenecks in your React app, React Scan provides insights into unnecessary re-renders and component inefficiencies, guiding optimizations.
 
-react-scan
+These recommendations are based on best practices and industry experience, but the right tool for your project depends on your specific needs. Always evaluate options carefully before integration.
