--- a/app/docs/reccomendations/page.mdx
+++ b/app/docs/reccomendations/page.mdx
@@ -6,56 +6,38 @@ Below, we share technologies that have proven useful in real-world scenarios. Th
 
 ## State Management
 
-> ⚠️ Strong opinion. Don't use them!
+- [nuqs](https://nuqs.47ng.com/) Type-safe search params state manager for React.
+
+> ⚠️ Strong opinion. Don't use anything more!
 
 On a more serious note you should consider all of the alternative, URL is a great place to store state and it's sharable. Additionally with RSC and server actions the need of additional storing system is less and less needed.
 
 ## Animations
 Animations enhance user experience, making interactions feel more fluid and engaging. Depending on your needs, consider:
 
-### AutoAnimate
-If you want to add motion effects with zero configuration, AutoAnimate allows you to introduce smooth transitions with a single line of code. It’s lightweight and ideal for quick UI enhancements without additional complexity.
+- [AutoAnimate↗](https://auto-animate.formkit.com/) If you want to add motion effects with zero configuration, AutoAnimate allows you to introduce smooth transitions with a single line of code. It’s lightweight and ideal for quick UI enhancements without additional complexity.
+- [Framer Motion↗](https://motion.dev/) For more sophisticated animations, Framer Motion provides a declarative API that enables precise control over animations, gestures, and layout transitions. It’s widely adopted for building polished, dynamic interfaces.
 
-### Framer Motion
-For more sophisticated animations, Framer Motion provides a declarative API that enables precise control over animations, gestures, and layout transitions. It’s widely adopted for building polished, dynamic interfaces.
+## Infrastructure, Databases
 
-## Deployments, Infrastructure, Databases, and CI
 Ensuring smooth deployments, scalable infrastructure, and reliable databases is essential. These tools streamline your workflow and improve maintainability.
 
-### Vercel
-Vercel revolutionized web app deployments with a seamless GitHub integration. It abstracts away infrastructure concerns while leveraging AWS under the hood, offering optimized performance and automatic scaling.
+- [Supabase↗](#) An open-source alternative to Firebase, Supabase provides managed Postgres databases with real-time capabilities, authentication, and storage. It’s an excellent choice for building scalable applications without vendor lock-in.
+- [Trigger.dev↗](#) For background jobs and workflows, Trigger.dev enables serverless job scheduling with first-class TypeScript support. It’s particularly useful for automating tasks within your application.
+- [Upstash↗](#) If your app needs a scalable, low-latency database for caching or rate-limiting, Upstash offers a serverless Redis solution with consumption-based pricing, making it a cost-efficient option.
 
-### Azure
-For enterprise-grade cloud solutions, Azure provides extensive services, from hosting to serverless computing and managed databases. Its tight integration with Microsoft products makes it a strong choice for organizations already invested in the ecosystem.
+## Analytics & Monitoring
 
-### Supabase
-An open-source alternative to Firebase, Supabase provides managed Postgres databases with real-time capabilities, authentication, and storage. It’s an excellent choice for building scalable applications without vendor lock-in.
+Understanding user behavior is crucial for optimizing your application. While many analytics providers exist, these stand out for their flexibility and feature sets. Proactively monitoring application health and performance helps prevent issues before they impact users.
 
-### Trigger.dev
-For background jobs and workflows, Trigger.dev enables serverless job scheduling with first-class TypeScript support. It’s particularly useful for automating tasks within your application.
-
-### Upstash
-If your app needs a scalable, low-latency database for caching or rate-limiting, Upstash offers a serverless Redis solution with consumption-based pricing, making it a cost-efficient option.
-
-## Analytics
-Understanding user behavior is crucial for optimizing your application. While many analytics providers exist, these stand out for their flexibility and feature sets.
-
-### PostHog
-A self-hostable, open-source analytics platform that provides deep insights into user interactions. It includes features like session replay, feature flags, and product analytics without vendor lock-in.
-
-## Monitoring
-Proactively monitoring application health and performance helps prevent issues before they impact users.
-
-### Sentry
-A robust error-tracking platform that captures exceptions, performance bottlenecks, and logs in real-time, allowing you to diagnose and fix issues efficiently.
+- [PostHog↗](#) A self-hostable, open-source analytics platform that provides deep insights into user interactions. It includes features like session replay, feature flags, and product analytics without vendor lock-in.
+- [Sentry↗](#) A robust error-tracking platform that captures exceptions, performance bottlenecks, and logs in real-time, allowing you to diagnose and fix issues efficiently.
 
 ## Performance
+
 Optimizing performance ensures a smooth user experience and efficient resource utilization.
 
-### Next.js Bundle Analyzer
-When optimizing your Next.js app, understanding its bundle size is crucial. This tool visualizes the contents of your JavaScript bundles, helping you identify and eliminate unnecessary dependencies.
-
-### React Scan
-For detecting performance bottlenecks in your React app, React Scan provides insights into unnecessary re-renders and component inefficiencies, guiding optimizations.
+- [Next.js Bundle Analyzer↗](#) When optimizing your Next.js app, understanding its bundle size is crucial. This tool visualizes the contents of your JavaScript bundles, helping you identify and eliminate unnecessary dependencies.
+- [React Scan↗](#) For detecting performance bottlenecks in your React app, React Scan provides insights into unnecessary re-renders and component inefficiencies, guiding optimizations.
 
 These recommendations are based on best practices and industry experience, but the right tool for your project depends on your specific needs. Always evaluate options carefully before integration.
