feat: project structure interactive doc wip

--- a/app/docs/project-structure/page.mdx
+++ b/app/docs/project-structure/page.mdx
@@ -1,87 +1,8 @@
+import { FolderSructure } from '@/components/folder-structure'
+
 # Project Structure
 
-```
-.
-├─ .github
-│  └─ workflows
-│     ├─ cd
-│     │  ├─ aws
-│     │  ├─ azure
-│     │  │  ├─ cleanup-preview
-│     │  │  │  └─ action.yml
-│     │  │  ├─ deploy-preview
-│     │  │  │  └─ action.yml
-│     │  │  └─ deploy-production
-│     │  │     └─ action.yml
-│     │  └─ vercel
-│     │     ├─ cleanup-preview
-│     │     │  └─ action.yml
-│     │     ├─ deploy-preview
-│     │     │  └─ action.yml
-│     │     └─ deploy-production
-│     │        └─ action.yml
-│     ├─ setup
-│     │  └─ action.yml
-│     ├─ ci.json
-│     ├─ cleanup-preview.json
-│     ├─ deploy-preview.json
-│     └─ deploy-production.json
-├─ .vscode
-│  ├─ extensions.json
-│  ├─ launch.json
-│  └─ settings.json
-├─ public
-│  └─ favicon.ico
-├─ src
-│  ├─ app
-│  │  ├─ _components
-│  │  │  └─ post.tsx
-│  │  ├─ api
-│  │  │  ├─ auth
-│  │  │  │  └─ [...nextauth]
-│  │  │  │     └─ route.ts
-│  │  │  └─ trpc
-│  │  │     └─ [trpc]
-│  │  │        └─ route.ts
-│  │  ├─ layout.tsx
-│  │  └─ page.tsx
-│  ├─ server
-│  │  ├─ auth.ts
-│  │  ├─ db
-│  │  │  ├─ index.ts
-│  │  │  └─ schema.ts
-│  │  └─ api
-│  │     ├─ routers
-│  │     │  └─ example.ts
-│  │     ├─ trpc.ts
-│  │     └─ root.ts
-│  ├─ styles
-│  │  └─ globals.css
-│  ├─ env.js
-│  └─ trpc
-│     ├─ query-client.ts
-│     ├─ react.tsx
-│     └─ server.ts
-├─ .cursorrules
-├─ .dockerignore
-├─ .env
-├─ .env.example
-├─ .eslintrc.cjs
-├─ .gitignore
-├─ .npmrc
-├─ .nvmrc
-├─ components.json
-├─ Dockerfile
-├─ docker-compose.yml
-├─ drizzle.config.ts
-├─ next-env.d.ts
-├─ next.config.js
-├─ package.json
-├─ postcss.config.cjs
-├─ prettier.config.js
-├─ README.md
-├─ renovate.json
-├─ start-localstck.sh
-├─ tailwind.config.ts
-└─ tsconfig.json
-```
+Our project structure follows Next.js conventions while adding some organization for scalability. Below is an interactive view of our project structure:
+
+<br />
+<FolderSructure />
