--- a/app/docs/architecture/page.mdx
+++ b/app/docs/architecture/page.mdx
@@ -1,3 +1,5 @@
+import ArchitectureDiagram from "@/components/architecture-diagram"
+
 # Architecture
 
 In this stack we tried to follow all of the best practices of the different components that are used to enable the various features. In order to offer some default we pre-configured the following layers:
@@ -9,7 +11,10 @@ In this stack we tried to follow all of the best practices of the different comp
 
 Below you can find a diagram representing an high level overview of architecture we strived to implement. This fullstack template aims to reduce complexity, increase DX and reduce dependencies overhead.
 
-![GELLIFY template architecture diagram](/opengraph-image.png)
+<br />
+<ArchitectureDiagram />
+
+{/* ![GELLIFY template architecture diagram](/opengraph-image.png) */}
 
 ## Architecture - App Layer
 
