--- a/app/docs/usage/drizzle/page.mdx
+++ b/app/docs/usage/drizzle/page.mdx
@@ -7,23 +7,48 @@ Drizzle is a headless Typescript ORM with [relational↗](https://orm.drizzle.te
 The Drizzle Client is located at `src/server/db/index.ts`. In this file, you can define your database connection url and connect your schema to the database object.
 
 ```ts
-import "dotenv/config";
+import { neon, neonConfig, Pool } from "@neondatabase/serverless";
+import { drizzle as drizzleHttp } from "drizzle-orm/neon-http";
+import { drizzle as drizzleWs } from "drizzle-orm/neon-serverless";
+import ws from "ws";
 
-import { neon, neonConfig } from "@neondatabase/serverless";
-import { drizzle } from "drizzle-orm/neon-http";
 import { env } from "~/env";
 import * as post from "./schema/posts";
 
+let connectionString = env.DATABASE_URL;
+
+const sql = neon(connectionString);
+const pool = new Pool({ connectionString });
+
 export const schema = { ...post };
 
-export const sql = neon(env.DATABASE_URL);
-
-export const db = drizzle({
+// Drizzle supports both HTTP and WebSocket clients. Choose the one that fits your needs:
+// HTTP Client:
+// - Best for serverless functions and Lambda environments
+// - Ideal for stateless operations and quick queries
+// - Lower overhead for single queries
+// - Better for applications with sporadic database access
+export const drizzleClientHttp = drizzleHttp({
   client: sql,
-  schema: schema,
+  schema,
+  logger: false, // env.NODE_ENV !== "production",
+  casing: "snake_case",
+});
+
+// WebSocket Client:
+// - Best for long-running applications (like servers)
+// - Maintains a persistent connection
+// - More efficient for multiple sequential queries
+// - Better for high-frequency database operations
+export const drizzleClientWs = drizzleWs({
+  client: pool,
+  schema,
   logger: env.NODE_ENV !== "production",
   casing: "snake_case",
 });
+
+export const db = drizzleClientWs;
+
 ```
 
 ## Schema
