feat: new doc structure

--- a/content/docs/fullstack/(technologies)/neon-db.mdx
+++ b/content/docs/fullstack/(technologies)/neon-db.mdx
@@ -1,3 +1,8 @@
+---
+title: NeonDB
+description: Your first document
+---
+
 # Neon
 
 When it comes to databases, we want something that’s **fast, scalable, and cost-effective**—without the headaches of traditional infrastructure management. That’s why we chose **NeonDB**, a next-generation PostgreSQL database that makes life easier for developers and businesses alike.
