--- a/content/docs/fullstack/(technologies)/shadcn-ui.mdx
+++ b/content/docs/fullstack/(technologies)/shadcn-ui.mdx
@@ -1,3 +1,8 @@
+---
+title: Shadcn/ui
+description: Your first document
+---
+
 # Shadcn/ui
 
 Choosing the right component library is crucial for building scalable, maintainable, and accessible applications. After evaluating several options, we selected **shadcn/ui** as our primary UI component library. This decision was based on multiple factors, including developer experience (DX), accessibility, design flexibility, AI-assisted development, and distribution efficiency.
