--- a/content/docs/fullstack/(technologies)/typescript.mdx
+++ b/content/docs/fullstack/(technologies)/typescript.mdx
@@ -1,3 +1,8 @@
+---
+title: Typescript
+description: Your first document
+---
+
 # Typescript
 
 Whether you’re a new or seasoned developer, we think that TypeScript is a must have.It can look intimidating at first, but much like a lot of tools, is something that many never look back from after starting to use it.
