--- a/content/docs/fullstack/(technologies)/env-variables.mdx
+++ b/content/docs/fullstack/(technologies)/env-variables.mdx
@@ -1,3 +1,8 @@
+---
+title: Env Variables
+description: Your first document
+---
+
 # Environment Variables
 
 Create GELLIFY App uses its own package [@t3-oss/env-nextjs↗](https://env.t3.gg/) along with [zod↗](https://zod.dev/) under the hood for validating environment variables at runtime and buildtime by providing a simple logic in `src/env.js`.
